[package]
name = "garmin_client"
version = "0.1.4"
edition = "2021"
license = "GPL-3.0"
description = "Provides an oauth2.0-capable client that interfaces with Garmin"
rust-version = "1.74"
repository = "https://github.com/poster515/Rust-Garmin/"
keywords = ["garmin", "fitness", "client", "oauth2"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.111"
url = "2.5.0"
url-builder = "0.1.1"
tokio = { version = "1.35.1", features = ["full"] }
log = "0.4.20"
log4rs = "1.2.0"
regex = "1.10.2"
reqwest = { version = "0.11", features = ["blocking", "cookies", "multipart", "json"] }
reqwest-oauth1 = "0.2.4"
zip = "0.6"
chrono = "0.4.31"
serde = "1.0.195"