[package]
name = "garmin_download"
version = "0.1.1"
edition = "2021"
license = "GPL-3.0"
description = "Provides a DownloadManager struct capable of downloading data directly from Garmin"
rust-version = "1.74"
repository = "https://github.com/poster515/Rust-Garmin/"
keywords = ["garmin", "download", "activities", "metrics"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.13.4"
serde_derive = "1.0.195"
serde = "1.0.195"
log = "0.4.20"
log4rs = "1.2.0"
chrono = "0.4.31"
serde_json = "1.0.111"
getopts = "0.2.21"
garmin_client = { path = "../garmin_client" }