[package]
name = "otf_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.111"
url = "2.5.0"
url-builder = "0.1.1"
log = "0.4.20"
log4rs = "1.2.0"
regex = "1.10.2"
reqwest = { version = "0.11", features = ["cookies", "multipart", "json"] }
reqwest-oauth1 = "0.2.4"
chrono = "0.4.31"
serde = "1.0.195"
cognito_srp = "0.1.2"